--- a/index.css
+++ b/index.css
@@ -1,17 +1,31 @@
-body{text-align: justify;}
-h1{
+body {
+   text-align: justify;
+}
+
+h1 {
    background-image: url('gallery/Mangal_Shobhajatra_in_Dhaka.jpg');
    height: 500px;
    background-repeat: no-repeat;
    font-size: 50px;
    text-align: center;
    background-size: cover;
+   margin-top: 0%;
 }
-div>img {
-   margin: 10px;
-   border: 1px solid #ccc;
-   float: left;
-   width: 400px;
-   height: 300px;
-   
-}
+
+ul {
+   list-style-type: none;
+   margin: 0;
+   padding: 0;
+   overflow: hidden;
+   background-color: #333;}
+
+li {float: left; }
+
+li a {
+   display: inline-block;
+   color: white;
+  text-align: center;
+   padding: 14px 16px;
+   text-decoration: none;}
+
+li a:hover {background-color: #111;}
